--- a/blocks/element/__group/element__group.css
+++ b/blocks/element/__group/element__group.css
@@ -1,8 +1,7 @@
 .element__group {
-  position: relative;
-  z-index: 3;
   max-width: 246px;
-  margin: 25px 15px 31px 21px;
+  margin: 0;
+  padding: 20px 15px 31px 21px;
   display: flex;
   justify-content: space-between;
 }
