--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,7 +1,6 @@
 .element__image {
   width: 282px;
   height: 282px;
-  position: relative;
-  z-index: 3;
   border-radius: 10px 10px 0px 0px;
+  margin: 0;
 }
