--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,6 @@
-
 .page {
-  margin: 0 auto;
-  font-family: "Inter";
+  max-width: 1280px;
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   color: #ffffff;
   background-color: #000000;
@@ -9,7 +8,12 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  background-color: ;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media (max-width: 320px) {
+  .page {
+    width: 320px;
+  }
 }
