--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -2,6 +2,7 @@
   width: 358px;
   height: 50.15px;
   margin: 0;
+  padding: 0;
   background-color: #000000;
   border-color: #000000;
   border-radius: 2px;
