--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__input-name {
+.popup__input {
   font-size: 14px;
   line-height: 17px;
   width: 358px;
@@ -8,8 +8,12 @@
   margin: 0 0 29.74px 0;
 }
 
+.popup__input:nth-last-child(1) {
+  margin-bottom: 48px;
+}
+
 @media (max-width: 500px) {
-  .popup__input-name {
+  .popup__input {
     width: 300px;
     font-size: 12px;
     line-height: 15px;
@@ -18,7 +22,7 @@
 }
 
 @media (max-width: 425px) {
-  .popup__input-name {
+  .popup__input {
     width: 280px;
     font-size: 12px;
     line-height: 15px;
