--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,13 @@
+* {
+   outline-width: 1px;
+   outline-style: solid;
+   outline-color: red;
+}
+
+
 .page {
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: "Inter";
   font-style: normal;
-  color: #ffffff;
   background-color: #000000;
   display: flex;
   flex-direction: column;
