--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -5,27 +5,53 @@
   height: 27.26px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  margin: 0 0 29.74px 0;
+  margin: 0;
+  margin-bottom: 29.74px;
+  padding: 0;
 }
 
-.popup__input:nth-last-child(1) {
-  margin-bottom: 48px;
+.popup__input:nth-last-of-type(1) {
+  margin: 0;
+}
+
+@media (max-width: 600px) {
+  .popup__input {
+    width: 330px;
+    font-size: 12px;
+    line-height: 15px;
+  }
 }
 
 @media (max-width: 500px) {
   .popup__input {
-    width: 300px;
+    width: 240px;
     font-size: 12px;
     line-height: 15px;
-    margin: 0 0 25px 0;
+    margin-bottom: 29.74px;
   }
 }
 
 @media (max-width: 425px) {
   .popup__input {
-    width: 280px;
+    width: 230px;
     font-size: 12px;
     line-height: 15px;
-    margin: 0 0 20px 0;
+  }
+}
+
+@media (max-width: 380px) {
+  .popup__input {
+    width: 220px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+
+@media (max-width: 350px) {
+  .popup__input {
+    width: 200px;
+    font-size: 12px;
+    line-height: 15px;
+    margin-bottom: 20px;
   }
 }
