--- a/pages/index.css
+++ b/pages/index.css
@@ -21,9 +21,16 @@
 @import url("../blocks/popup/__container/popup__container.css");
 @import url("../blocks/popup/__title/popup__title.css");
 @import url("../blocks/popup/__button/popup__button.css");
+@import url("../blocks/popup/__button_top/popup__button_top.css");
 @import url("../blocks/popup/__input/popup__input.css");
+@import url("../blocks/popup/__input_link/popup__input_link.css");
+@import url("../blocks/popup/__input_denomination/popup__input_denomination.css");
 @import url("../blocks/popup/__icon/popup__icon.css");
 @import url("../blocks/popup/__icon-click/popup__icon-click.css");
+@import url("../blocks/popup/__icon-click/__icon-click_card/popup__icon-click_card.css");
+@import url("../blocks/popup/__plase/popup__plase.css");
+@import url("../blocks/popup/__image-element/popup__image-element.css");
+@import url("../blocks/popup/__group/popup__group.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/element/element.css");
@@ -32,6 +39,10 @@
 @import url("../blocks/element/__title/element__title.css");
 @import url("../blocks/element/__group/element__group.css");
 @import url("../blocks/element/__vector/element__vector.css");
+@import url("../blocks/element/__vector/_dark/element__vector_dark.css");
+@import url("../blocks/element/__remove-click/element__remove-click.css");
+@import url("../blocks/element/__urn/element__urn.css");
+@import url("../blocks/element/__image/__heart-click_dark/element__heart-click_dark.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__author/footer__author.css");
 @import url("../blocks/footer/_indent/footer_indent.css");
